# jax-kalman

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp.py  test_requirements.txt
.github/workflows/: test.yml
jaxman/: __init__.py  kalman_filter.py  result.py  results.py  typing.py  utils.py
kaxman/: __init__.py  kalman_filter.py  results.py
tests/: test_kalman.py  test_numpyro.py  test_utils.py
