[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxman"
dynamic = ["version"]
description = "Kalman flters in jax"
authors = [
  { name = "Victor Gruselius", email="victor.gruselius@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.9"

dependencies = [
    "numpyro",
    "jax",
    "jaxtyping",
]

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "ruff",
    "flake8",
    "pre-commit",
    "pytest",
    "coverage",
    "bumpver",
]

test = [
    "pykalman",
    "numpy<2.0",
]


[tool.setuptools.packages.find]
include = ["jaxman*"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff]
line-length = 120

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
push = false
tag = true
tag_message = "{new_version}"
tag_scope = "default"

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

"jaxman/__init__.py" = [
    '__version__ = "{version}"'
]

[tool.setuptools.dynamic]
version = {attr = "jaxman.__version__"}

[tool.pytest.ini_options]
pythonpath = ["."]